--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,15 +1,7 @@
-[theme]
-primaryColor = "#667eea"
-backgroundColor = "#0e1117"
-secondaryBackgroundColor = "#1a1a2e"
-textColor = "#ffffff"
+[browser]
+gatherUsageStats = false
 
 [server]
-headless = false
-port = 8501
+headless = true
 enableCORS = false
 enableXsrfProtection = false
-
-[browser]
-serverAddress = "localhost"
-gatherUsageStats = false
