--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.50.0
-pandas==2.3.3
-plotly==6.3.0
-reportlab==4.4.3
-matplotlib==3.10.7
-Pillow==11.3.0
+streamlit==1.28.1
+pandas==2.1.3
+plotly==5.17.0
+Pillow==10.1.0
+reportlab==4.0.7
+matplotlib==3.8.2
+seaborn==0.12.2
