--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-streamlit==1.28.1
-pandas==2.1.1
-plotly==5.17.0
-Pillow==10.0.1
-reportlab==4.0.4
-matplotlib==3.8.0
-seaborn==0.12.2
+streamlit
+pandas
+plotly
